--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 
 								<ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
 									<li>
+										<a href="https://t.me/muhammad_4202"><i class="fa fa-telegram"></i></a>
+									</li>
+									<li>
 										<a href="https://twitter.com/MUHAMMAD_4202"><i class="fa fa-twitter"></i></a>
 									</li>
 									<li>
@@ -174,7 +177,7 @@
 								</ul>
 							</div>
 							<a
-							download="./profil/Rasuljonov Muhamamd.pdf"
+								download="./profil/Rasuljonov Muhamamd.pdf"
 								href="./profil/Rasuljonov Muhamamd.pdf"
 								class="btn btn-fill wow fadeInUp"
 								data-wow-duration="0.8s"
@@ -652,6 +655,9 @@
 										data-wow-duration="0.8s"
 										data-wow-delay="0.7s"
 									>
+										<li>
+											<a href="https://t.me/muhammad_4202"><i class="fa fa-telegram"></i></a>
+										</li>
 										<li>
 											<a href="https://twitter.com/MUHAMMAD_4202"><i class="fa fa-twitter"></i></a>
 										</li>
