--- a/index.html
+++ b/index.html
@@ -320,8 +320,7 @@
 										data-wow-duration="0.8s"
 										data-wow-delay="0.6s"
 									>
-										<h4>PDP <a href="https://online.pdp.uz/">Academy</a></h4>
-										<div class="mh-eduyear">2005-2008</div>
+										<h4>PDP <a href="https://online.pdp.uz">Academy</a></h4>
 										<p>
 											I started studying at Pdp Academy in 2022 and graduated in 2024 I met very
 											strong mentors here
@@ -356,8 +355,22 @@
 										data-wow-delay="0.7s"
 									>
 										<h4>
-											Art & Multimedia From
-											<a href="https://puiz-game-muhammad.netlify.app/">Oxford University 👈</a>
+											<a href="https://pomodoro-pdp.netlify.app">pomodoro made 👈</a>
+										</h4>
+										<span>Responsibility :</span>
+										<ul class="work-responsibility">
+											<li><i class="fa fa-circle"></i> Tailwind</li>
+											<li><i class="fa fa-circle"></i>Typescript</li>
+										</ul>
+									</div>
+									<!-- Education Institutes-->
+									<div
+										class="mh-work-item dark-bg wow fadeInUp"
+										data-wow-duration="0.8s"
+										data-wow-delay="0.7s"
+									>
+										<h4>
+											<a href="https://puiz-game-muhammad.netlify.app/">math game 👈</a>
 										</h4>
 										<span>Responsibility :</span>
 										<ul class="work-responsibility">
