--- a/index.html
+++ b/index.html
@@ -705,6 +705,11 @@
 		<script src="assets/plugins/js/isotope.pkgd.js"></script>
 		<script src="assets/plugins/js/packery-mode.pkgd.js"></script>
 		<script src="assets/js/custom-scripts.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
 		<script src="./main.js"></script>
+
+
 	</body>
 </html>
