--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
 								<li>
 									<div class="mh-progress mh-progress-circle" data-progress="70"></div>
 									<div class="pr-skill-name">Creativity</div>
+									mh-professional-skills
 								</li>
 							</ul>
 						</div>
@@ -668,20 +669,30 @@
 										data-wow-duration="0.8s"
 										data-wow-delay="0.7s"
 									>
-										<li>
-											<a href="https://t.me/muhammad_4202"><i class="fa fa-telegram"></i></a>
-										</li>
-										<li>
-											<a href="https://twitter.com/MUHAMMAD_4202"><i class="fa fa-twitter"></i></a>
-										</li>
-										<li>
-											<a href="https://github.com/Rasuljonov02"><i class="fa fa-github"></i></a>
-										</li>
-										<li>
-											<a href="https://www.linkedin.com/in/muhammadjon-rasuljonov-03299125b/"
-												><i class="fa fa-linkedin"></i
-											></a>
-										</li>
+										<div class="mh-header-info">
+											<ul
+												class="social-icon wow fadeInUp"
+												data-wow-duration="0.8s"
+												data-wow-delay="0.7s"
+											>
+												<li>
+													<a href="https://t.me/muhammad_4202"><i class="fa fa-telegram"></i></a>
+												</li>
+												<li>
+													<a href="https://twitter.com/MUHAMMAD_4202"
+														><i class="fa fa-twitter"></i
+													></a>
+												</li>
+												<li>
+													<a href="https://github.com/Rasuljonov02"><i class="fa fa-github"></i></a>
+												</li>
+												<li>
+													<a href="https://www.linkedin.com/in/muhammadjon-rasuljonov-03299125b/"
+														><i class="fa fa-linkedin"></i
+													></a>
+												</li>
+											</ul>
+										</div>
 									</ul>
 								</div>
 							</div>
@@ -705,11 +716,8 @@
 		<script src="assets/plugins/js/isotope.pkgd.js"></script>
 		<script src="assets/plugins/js/packery-mode.pkgd.js"></script>
 		<script src="assets/js/custom-scripts.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 
 		<script src="./main.js"></script>
-
-
 	</body>
 </html>
