--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 								</ul>
 							</div>
 							<a
-								download="./profil/Rasuljonov Muhamamd.pdf"
-								href="./profil/Rasuljonov Muhamamd.pdf"
+								download="./profil/Rasuljonov Muhamamd (2).pdf"
+								href="./profil/Rasuljonov Muhamamd (2).pdf"
 								class="btn btn-fill wow fadeInUp"
 								data-wow-duration="0.8s"
 								data-wow-delay="0.4s"
