--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 									<li><span>Javascript</span></li>
 									<li><span>React</span></li>
 									<li><span>Tailwind css</span></li>
+									<li><span>Vuejs</span></li>
 								</ul>
 							</div>
 							<a
@@ -266,6 +267,8 @@
 											<li><span>Javascript</span></li>
 											<li><span>React</span></li>
 											<li><span>Tailwind css</span></li>
+											<li><span>Vuejs</span></li>
+
 											<li><span>I can write api in Typescript </span></li>
 										</ul>
 									</div>
