--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<link rel="alternate stylesheet" href="assets/css/colors/purple.css" title="purple" />
 		<link rel="alternate stylesheet" href="assets/css/colors/slate.css" title="slate" />
 		<link rel="alternate stylesheet" href="assets/css/colors/yellow.css" title="yellow" />
-		<link rel="stylesheet" href="./main.css">
+		<link rel="stylesheet" href="./main.css" />
 	</head>
 
 	<body class="dark-vertion black-bg">
@@ -98,6 +98,7 @@
 									data-wow-duration="0.8s"
 									data-wow-delay="0.2s"
 								></h2>
+								<br />
 								<h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
 									Frontend Development
 								</h4>
