--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Rasuljonov Muhamamd</title>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="description" content="John" />
+		<meta name="description" content="Muhammad" />
 		<meta
 			name="keywords"
 			content="creative, cv, designer,  online cv, online resume, powerful portfolio, professional, professional resume, responsive, resume, vcard "
