--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
 											<li><span>React</span></li>
 											<li><span>Tailwind css</span></li>
 											<li><span>Vuejs</span></li>
+											<li><span>Angular js</span></li>
+
 
 											<li><span>I can write api in Typescript </span></li>
 										</ul>
