--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 								</ul>
 							</div>
 							<a
-								download="./profil/Rasuljonov Muhammad.pdf"
-								href="./profil/Rasuljonov Muhammad.pdf"
+								download="./profil/rasuljonov muhammad.pdf"
+								href="./profil/rasuljonov muhammad.pdf"
 								class="btn btn-fill wow fadeInUp"
 								data-wow-duration="0.8s"
 								data-wow-delay="0.4s"
