--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 									<li><span>React</span></li>
 									<li><span>Tailwind css</span></li>
 									<li><span>Vuejs</span></li>
+									<li><span>Nuxt js</span></li>
 								</ul>
 							</div>
 							<a
@@ -270,7 +271,7 @@
 											<li><span>React</span></li>
 											<li><span>Tailwind css</span></li>
 											<li><span>Vuejs</span></li>
-											<li><span>Angular js</span></li>
+											<li><span>Nuxt js</span></li>
 
 
 											<li><span>I can write api in Typescript </span></li>
